--- a/com-project-clean/src/main/resources/templates/statistics/bestEmployee.html
+++ b/com-project-clean/src/main/resources/templates/statistics/bestEmployee.html
@@ -2,16 +2,50 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 
-<script
-	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <title>Document</title>
 <style>
 
+#topfive_employees {
+
+margin-left: 8%;
+
+}
+
+#yuhanjo {
+
+width: 41%;
+margin:0 auto;
+
+}
+
+#picture {
+
+ height:240px;
+ width:390px;
+ margin:0 auto;
+  
+}
+
+
+div2 {
+		
+		margin-left: 5%;
+		height: 30%;
+		text-align: center;
+		font-weight: bold;
+		font-size:20;
+		color: #575757;
+		
+}
+
 #top_employees {
-	display: flex;
+	margin:0 auto;
+	
 
 }
 tr:nth-of-type(1) {
@@ -19,7 +53,23 @@ tr:nth-of-type(1) {
 }
 
 table {
-	width: 100%;
+
+	margin:0 auto;
+	width: 90%;
+	height: 100%;
+	border-collapse: collapse;
+	border-style: hidden;
+}
+
+table2 {
+	width: 130%;
+	height: 100%;
+	border-collapse: collapse;
+	border-style: hidden;
+}
+
+table2 {
+	width: 0%;
 	height: 100%;
 	border-collapse: collapse;
 	border-style: hidden;
@@ -35,6 +85,7 @@ table td {
 }
 
 table tr {
+
 	border: 1px solid black;
 	text-align: center;
 	font-weight: bold;
@@ -58,60 +109,70 @@ table tr {
 	padding: 10;
 	background-color: #7DBEED;
 }
+section {
+
+width: 70% !important;
+
+}
+
+#center {
+
+margin-left: 43%
+
+}
+
 </style>
 
 </head>
 <body>
-
-
 	<main>
-		<div th:include="common/header.html"></div>
+		<div th:include="Common/Header.html"></div>
 		<div th:include="statistics/statisticsAside.html"></div>
 		<article>
 			<section>
-				<h4 id="title">7월 근무시간 누적 통계</h4>
+			<!-- 	<h4 id="title" align="center">7월 근무시간 누적 통계</h4> -->
 				<div  id="top_employees">
-				<div >
-					<div id="best_employee">
-						<div>
-							<td>■ 이달의 우수직원</td> <br> <small>누적된 근무시간이 많은 직원은 이달의
-								우수직원이 된다.</small>
-						</div>
-						<div class="picture">
-							<!-- 
-					<img id="pictureImg" 
-						th:if="${bestEmployee.employeePictureSaveName}!=null"
-						th:src="@{/adminEmployeePicture/} + ${bestEmployee.employeePictureSaveName}" 
-             	  		  width="100px" height="100px">
-					 -->
-						</div>
+				
+					<div2 id="center">
+						<td>■ 이달의 우수직원</td> 
+						<br>
+						<td>누적된 근무시간이 많은 직원은 이달의 우수직원이 된다.</td>
+					</div2>
+					<div id="picture">
+					    <br>
+			    		<img id="pictureImg" th:src="@{/adminEmployeePicture/} + ${bestEmployee.employeePictureSaveName}" alt="사진을 등록해주세요" width="100%" height="100%"></th>
 					</div>
-					<table>
-						<tr>
-							<td>이달의 우수직원</td>
-							<td th:text="${ bestEmployee.employeeName }"></td>
-						</tr>
+				<div2>
+					<table id="yuhanjo">
+						<td>이달의 우수직원</td>
+						<td th:text="${ bestEmployee.employeeName }"></td>
 					</table>
-				</div>
+				</div2>
+				</div2>
 
-
+				<br>
+				<br>
+				<br>
 				<div id="topfive_employees">
-					<div>■ 7월 직원 근무시간 누적 통계 순위</div>
-
-					<div class="table">
+					<div2>■ 7월 직원 근무시간 누적 통계 순위</div2>
+					<br>
+					<div2 class="table">
 						<table >
 							<tr>
 								<th>순 위</th>
 								<th>이 름</th>
 								<th>근무시간</th>
+								<th>전화번호</th>
+								
 							</tr>
 							<tr th:each="employee, stat : ${ bestEmployeeList }">
 								<td th:text="${ stat.count }"></td>
 								<td th:text="${ employee.employeeName }"></td>
 								<td th:text="|${ employee.employeeSumTime } 시간|"></td>
+								<td th:text="|${ employee.employeePhone }"></td>
 							</tr>
 						</table>
-					</div>
+					</div2>
 
 				</div>
 				</div>
