--- a/com-project-clean/src/main/resources/templates/statistics/employeeTotalWorkhours.html
+++ b/com-project-clean/src/main/resources/templates/statistics/employeeTotalWorkhours.html
@@ -5,8 +5,8 @@
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="CommonLayout.css">
-<script
-	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <style>
 tr:nth-of-type(1) {
 	background: #7DBEED;
@@ -52,10 +52,6 @@ table tr {
       background-color: #7DBEED;
    }
 
-.chart {
-	
-}
-
 </style>
 <title>Document</title>
 
@@ -81,13 +77,12 @@ table tr {
 							<td th:text="|${ employeeTotalHours } 시간|"></td>
 							<td th:text="|${ employeeAvgHours } 시간|"></td>
 						</tr>
-						<button class="btn-bs" value="조회"
-							onclick="location.href='employeeTotalWorkhoursDetail'">직원 별 조회</button>
+						<button class="btn-bs" value="조회" onclick="location.href='employeeTotalWorkhoursDetail'">직원 별 조회</button>
 
 					</table>
 
 				</div>
-					
+					<br>
 				     <script type="text/javascript">
       google.charts.load('current', {'packages':['corechart']});
       google.charts.setOnLoadCallback(drawVisualization);
@@ -96,8 +91,8 @@ table tr {
         // Some raw data (not necessarily accurate)
         var data = google.visualization.arrayToDataTable([
           ['', '근무시간' ],
-          ['총 근무시간',  1844000 ],
-          ['평균 근무시간',  -67356000 ],
+          ['총 근무시간',  409 ],
+          ['평균 근무시간',  15 ],
                    
         ]);
         
