--- a/com-project-clean/src/main/resources/templates/admin/hrCard/boss/standbySecondVacationDetail.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/boss/standbySecondVacationDetail.html
@@ -180,10 +180,9 @@
              <tr>
               <td class="subTitle">총관리자 결재 사유</td>
               <td>
-              	<textarea class="reasonBox" name="bossConfirmReason" cols="40" rows="5" ></textarea>
+              	<textarea class="reasonBox" name="bossConfirmReason" cols="40" rows="5" style="resize:none;"></textarea>
               </td> 
             </tr>
-           <!-- 대표 <th:block sec:authorize="hasRole('BOSS')"> -->
           </tbody>
      
           </table>
