--- a/com-project-clean/src/main/resources/templates/admin/hrCard/adminModifySelf.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/adminModifySelf.html
@@ -126,10 +126,12 @@
 	             	<input type="text" id="adminPhone2" name="adminPhone2" class="required" maxlength='4' th:value="${phone.middlePhoneNumber}" placeholder="0000" required style="width: 45px">-
 	             	<input type="text" id="adminPhone3" name="adminPhone3" class="required" maxlength='4' th:value="${phone.lastPhoneNumber}" placeholder="0000" required style="width: 45px">
 	            	<div id="phoneNotice" style="display:none; color: red;">4자리 숫자의 번호를<br> 입력해 주세요.</div>
+	            	<div id="oldNotice" style="display:none; color: red;">기존 번호를 사용하시겠습니까?</div>
+	            	
 	            	
 	            	<input style="display: none;" type="text" id="adminPhone" name="adminPhone"></td>
 	            	<td style="display: none;"><input type="text" th:value="${phone.firstPhoneNumber}" id="firstPhoneNumber" name="firstPhoneNumber"></td>
-	            
+	            	
 		      </tr>
 		      <tr>
 		        <td>생년월일</td>
@@ -145,7 +147,7 @@
 		    <tbody>
 		     <tr>
 		        <td class="tg-wman">이메일</td>
-		        <td colspan="3"><input th:value="${email.email}" type="text" id="email" class="required" name="employeeEmail" placeholder="영문 숫자 4~19자" required style="width: 200px;"> @ 
+		        <td colspan="3"><input th:value="${email.email}" type="text" id="email" class="required" name="employeeEmail" maxlength="19" placeholder="영문 숫자 4~19자" required style="width: 200px;"> @ 
 		            <select id="domain" name="domain" style="width: 150px; height: 25px;">
 			            <option value="naver.com" selected>naver.com</option>
 			            <option value="google.com">google.com</option>
@@ -172,7 +174,7 @@
 		      </tr>
 		      <tr>
 		        <td class="tg-wman">상세주소</td>
-		        <td class="tg-wman" colspan="5"><input type="text" id="addressDetail" name="addressDetail" th:value="${address.addressDetail}" placeholder="상세주소를 입력해주세요." required style="width: 500px;"></td>
+		        <td class="tg-wman" colspan="5"><input type="text" id="addressDetail" name="addressDetail" th:value="${address.addressDetail}" placeholder="상세주소를 입력해주세요." maxlength="35" required style="width: 500px;"></td>
 		      </tr>
 		      <tr>
 		        <td>입사일</td>
@@ -201,6 +203,9 @@
 		   	
 		   	<input class="btn_hrcard" type="button" id="modify" value="수정완료">
 		    <input class="btn_hrcard" type="button" id="resetButton" value="수정취소">
+		    
+		    
+		    <input id="oldAdminPhone" type="hidden" th:value="${adminModify.adminPhone}">
     	</div>
     </form>
     
@@ -242,7 +247,7 @@
  			return false;
  		}
  	});
-    
+ 	
 	/* 핸드폰 번호 정규표현식 */
 	
    $("#adminPhone2").focusout(function (event) {
@@ -270,22 +275,36 @@
    });
 	
   
+   
+   
   /* 전화번호 중복 검사 */
   $('#adminPhone3').focusout(function () {
+	  
+	  var oldPhone = $("#oldAdminPhone").val();
+	  var inputPhone = $("#adminPhone1").val() + "-" + $("#adminPhone2").val() + "-" + $("#adminPhone3").val();
+	  
 	  var regexp = /^[0-9]{4}/g;
       phoneCheck2 = $(this).val();
       
       if (!regexp.test(phoneCheck2)) {
+    	  
     	  $('#phoneNotice').show();
       	  $(this).val('');
       
-      
-      	} else if(regexp.test(phoneCheck2)){
+      	} else if(oldPhone === inputPhone){
+      		
       		$('#phoneNotice').hide();
+      		alert("기존 번호를 사용하시겠습니까?");
+      			
+      		} else {
+      		
+      		$('#phoneNotice').hide();
+      		
 	        $.ajax({
 	            url: '/admin/hr/duplication',
 	            data : 'adminPhone=' + $("#adminPhone1").val() + "-" + $("#adminPhone2").val() + "-" + $("#adminPhone3").val(),
 	            dataType: 'json',
+	            
 	            success: function(result) {
 	                if (result == '0') {
 	                	confirm("사용 가능한 전화번호입니다.");
@@ -302,7 +321,7 @@
 	        });
 	   				
 	    }
-		
+  
 	});
  
     </script>
