--- a/com-project-clean/src/main/resources/templates/admin/hrCard/vacation/standbyVacationDetail.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/vacation/standbyVacationDetail.html
@@ -174,7 +174,7 @@
               </tr>
               <tr>
               	<td class="subTitle">결재 사유</td>
-              	<td><textarea class="reasonBox" name="hrConfirmReason" cols="40" rows="5"></textarea></td>
+              	<td><textarea class="reasonBox" name="hrConfirmReason" cols="40" rows="5" style="resize:none;"></textarea></td>
               </tr>
             </tbody>
            
