2022/07/25 22:29 try catch 에러 페이지 생성 및 연결

--- a/com-project-clean/src/main/resources/templates/admin/adminAside.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminAside.html
@@ -198,6 +198,16 @@ font-weight: bold;
         	<a style="font-size : 16px" href="/admin/select/selectMyVacation/move">나의 휴가 조회</a>
         </th:block>
         
+        
+        
+        
+        	<a style="font-size : 16px" href="/admin/error/test/test">에러 테스트</a>
+        
+        
+        
+        
+        
+        
         <th:black sec:authorize="hasRole('ROLE_ADMIN_HR')">
         	<a style="font-size : 16px" href="/admin/hr/humanResource/selectAllVacation/move">휴가 전체 조회</a>
         </th:block>
