--- a/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectEmployee.html
@@ -91,11 +91,11 @@
         <div class="buttonBox">
             <span>
             <span:block sec:authorize="hasRole('ROLE_ADMIN_HR')">
-                <span><button id="adminModify">HR수정</button></span>
+                <span><button id="adminModify">Hr수정</button></span>
             </span:block>
                  
             <span:block sec:authorize="hasRole('ROLE_EMPLOYEE')">
-                <span><button id="employeeModify">EMPLOYEE수정</button></span>
+                <span><button id="employeeModify">Emp수정</button></span>
             </span:block>
                  
                 <span:block sec:authorize="hasRole('ADMIN_HR')">
