2022/07/25 23:59 delete picture who employee employee test를 위해 사용했던 모든 사진 delete후 push

--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/returnEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/returnEmployee.html
@@ -69,7 +69,7 @@
 						<td th:text="${returnEmployee.employeeNo}"></td>
 						<td class="subTitle">이름</td>
 						<td th:text="${returnEmployee.employeeName}"></td>
-						<td colspan="2" rowspan="3"><img id="pictureImg"th:src="@{/adminEmployeePicture/} + ${returnEmployee.employeePictureSaveName}" width="125px" height="125px"></td>
+						<td colspan="2" rowspan="3"><img id="pictureImg"th:src="@{/adminEmployeePicture/} + ${returnEmployee.employeePictureSaveName}" width="125px" height="125px" onerror="this.style.display='none'"></td>
 					</tr>
 					<tr>
 						<td class="subTitle">ID</td>
