--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registEmployeeList.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registEmployeeList.html
@@ -38,12 +38,13 @@
 	                
 	                <thead>
 	                  <tr>
+	                  <!-- 
 	                    <td class="subTitle">직원번호</td>
 	                    <td id="employeeNo" th:text="${employeeNo}"></td>
-	                    
+	                     -->
 	                    <td style="display: none;"><input name="employeeNo" th:value="${employeeNo}"/></td>
 	                    <td class="subTitle">이름</td>
-	                    <td><input type="text" id="employeeName" name="employeeName" class="required" maxlength='4' placeholder="한글 2~4글자" required>
+	                    <td colspan="3"><input type="text" id="employeeName" name="employeeName" class="required" maxlength='4' placeholder="한글 2~4글자" required style="width: 90px;">
 	                    <div class="warning" id="nameCheckMessage">2~4글자 한글을 입력해주세요</div></td>
 	                    
 	                    <!-- <td colspan="2" rowspan="3"><div id="picture">사진</div></td> -->
