2022/07/26 11:48 catch error insert employeeId 직원 번호 시퀀스 관련 error 수정

--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registEmployeeList.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registEmployeeList.html
@@ -42,7 +42,7 @@
 	                    <td class="subTitle">직원번호</td>
 	                    <td id="employeeNo" th:text="${employeeNo}"></td>
 	                     -->
-	                    <td style="display: none;"><input name="employeeNo" th:value="${employeeNo}"/></td>
+	                    <!-- <td style="display: none;"><input name="employeeNo" th:value="${employeeNo}"/></td> -->
 	                    <td class="subTitle">이름</td>
 	                    <td colspan="3"><input type="text" id="employeeName" name="employeeName" class="required" maxlength='4' placeholder="한글 2~4글자" required style="width: 90px;">
 	                    <div class="warning" id="nameCheckMessage">2~4글자 한글을 입력해주세요</div></td>
