--- a/com-project-clean/src/main/resources/templates/admin/pay/management/adminPaySelectInfo.html
+++ b/com-project-clean/src/main/resources/templates/admin/pay/management/adminPaySelectInfo.html
@@ -18,7 +18,7 @@
 	            <th width="250px" th:utext="|최종 급여 <br> <p>${ pay.payAdminFinalSalary }원</p>|"></th>
 	        </tr>
 	        <tr>
-	            <th height="30px">직원이름</th>
+	            <th height="30px">이름</th>
 	            <th colspan="3">전화번호</th>
 	            <th >직급</th>
 	        </tr>
