--- a/com-project-clean/src/main/resources/templates/admin/pay/management/bestEmployeePayWaiting.html
+++ b/com-project-clean/src/main/resources/templates/admin/pay/management/bestEmployeePayWaiting.html
@@ -70,7 +70,7 @@ section{
 	if(modifyFailMessage){
 		Swal.fire({
 			  position: 'mid',
-			  icon: 'fail',
+			  icon: 'error',
 			  title: '이미 이달의 우수직원 보너스를 받았습니다!',
 			  showConfirmButton: false,
 			  timer: 3000
