--- a/com-project-clean/src/main/resources/templates/common/checkListAside.html
+++ b/com-project-clean/src/main/resources/templates/common/checkListAside.html
@@ -11,9 +11,11 @@
     	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <style>
 body {
-  font-family: "Lato", sans-serif;
+    font-family: 'MinSans-Medium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/MinSans-Medium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
-
 section{
   width:65%;
   margin-top:1%;
@@ -33,7 +35,7 @@ section{
 .sidenav a, .dropdown-btn {
   padding: 6px 8px 6px 16px;
   text-decoration: none;
-  font-size: 19px;
+  font-size: 18px;
   color: #575757;
   display: block;
   border: none;
@@ -44,8 +46,13 @@ section{
   outline: none;
 }
 
+.dropdown-btn  {
+ font-size: 20px;
+ font-weight: bold;
+}
+
 /* On mouse-over */
-.sidenav a:hover, .dropdown-btn:hover {
+.sidenav a:hover {
   -webkit-text-stroke: 1px;
   color:#7DBEED;
 }
@@ -53,7 +60,6 @@ section{
 /* Add an active class to the active dropdown button */
 .active {
     background-color : #f1f1f1;
-    -webkit-text-stroke: 1px;
 }
 
 /* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
