--- a/com-project-clean/src/main/resources/templates/admin/hrCard/registVacation.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/registVacation.html
@@ -140,7 +140,7 @@
                 <td th:text="${admin.adminJob}"></td>
               </tr>
               <tr>
-                <td class="subTitle">휴가명</td>
+                <td class="subTitle">휴가구분</td>
                 <td>
                 	<select required id="vacationName" name="vacationName">
                 		<option>연차</option>
