--- a/com-project-clean/src/main/resources/templates/admin/hrCard/vacation/standbyVacationDetail.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/vacation/standbyVacationDetail.html
@@ -155,7 +155,7 @@
                 <td th:text="${adminJob}"></td>
               </tr>
               <tr>
-                <td class="subTitle">휴가명</td>
+                <td class="subTitle">휴가구분</td>
                 <td th:text="${ vacation.vacationName }"></td>
               </tr>
               <tr>
