--- a/com-project-clean/src/main/resources/templates/admin/hrCard/boss/standbySecondVacationDetail.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/boss/standbySecondVacationDetail.html
@@ -154,7 +154,7 @@
                 <td th:text="${adminJob}"></td>
               </tr>
               <tr>
-                <td class="subTitle">휴가명</td>
+                <td class="subTitle">휴가구분</td>
                 <td th:text="${ vacation.vacationName }"></td>
               </tr>
               <tr>
