--- a/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectMyVacationDetail.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectMyVacationDetail.html
@@ -64,7 +64,7 @@
                 <td th:text="${admin.adminJob}"></td>
               </tr>
               <tr>
-                <td class="subTitle">휴가명</td>
+                <td class="subTitle">휴가구분</td>
                 <td th:text="${vacation.vacationName}"></td>
               </tr>
               <tr>
