--- a/com-project-clean/src/main/resources/templates/reservation/notificationDetail.html
+++ b/com-project-clean/src/main/resources/templates/reservation/notificationDetail.html
@@ -77,7 +77,7 @@
 	</div>
 	<script th:inline="javascript">
 		function detail(){
-			const start = new Date([[${#dates.format(reservation.businessStartTime, 'yyyy-MM-dd')}]]);
+			const start = new Date([[${#dates.format(reservation.businessStartTime, 'yyyy-MM-dd HH:mm:ss')}]]);
 			const now = new Date();
 			if(start.getTime() < now.getTime()){
 				alert("이미 종료된 예약입니다.");
